[project]
name = "handy-nodes-comfyui"
description = "This is a pack with some handy nodes for ComfyUI."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["numpy"]

[project.urls]
Repository = "https://github.com/anhkhoatranle30/Handy-Nodes-ComfyUI"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "Handy-Nodes-ComfyUI"
Icon = ""
