[project]
name = "handy-nodes-comfyui"
description = "This is a pack with some handy nodes for ComfyUI."
version = "1.0.2"
license = {file = "LICENSE"}
dependencies = ["numpy"]

[project.urls]
Repository = "https://github.com/anhkhoatranle30/Handy-Nodes-ComfyUI"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "anhkhoatranle30"
DisplayName = "Handy-Nodes-ComfyUI"
Icon = ""
